--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -15,23 +15,11 @@
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:layout_marginLeft="15dp"
-            app:srcCompat="@drawable/folder_icon_purple" />
-
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            app:srcCompat="@drawable/folder_indicator_purple" />
-
         <TextView
             android:id="@+id/nombreDirectorioTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="25dp"
             android:textSize="20sp" />
 
         <LinearLayout
@@ -40,13 +28,22 @@
             android:gravity="center_vertical|end"
             android:orientation="horizontal">
 
-            <Button
+            <ImageButton
                 android:id="@+id/home_button"
-                android:layout_width="85dp"
+                android:layout_width="50dp"
                 android:layout_height="40dp"
                 android:layout_marginRight="10dp"
                 android:background="@drawable/item_shape"
-                android:text="Inicio"
+                android:src="@drawable/baseline_home_24"
+                android:textSize="14sp" />
+
+            <ImageButton
+                android:id="@+id/refresh_button"
+                android:layout_width="50dp"
+                android:layout_height="40dp"
+                android:layout_marginRight="10dp"
+                android:background="@drawable/item_shape"
+                android:src="@drawable/baseline_refresh_24"
                 android:textSize="14sp" />
         </LinearLayout>
     </LinearLayout>
