--- a/app/src/main/res/xml/config.xml
+++ b/app/src/main/res/xml/config.xml
@@ -7,7 +7,7 @@
         <Preference
             android:key="modificar_datos"
             android:title="Modificar datos personales"
-            android:summary="Modifica tu nombre, apellidos y nick name" />
+            android:summary="Modifica tu nombre, apellidos" />
 
         <Preference
             android:key="seleccionar_suscripcion"
